; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_window.c_glfwWindowHintString.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_window.c_glfwWindowHintString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_8__, %struct.TYPE_6__ }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_6__ = type { i32 }

@_glfw = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@GLFW_INVALID_ENUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Invalid window hint string 0x%08X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwWindowHintString(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = call i32 (...) @_GLFW_REQUIRE_INIT()
  %10 = load i32, i32* %3, align 4
  switch i32 %10, label %23 [
    i32 130, label %11
    i32 129, label %15
    i32 128, label %19
  ]

11:                                               ; preds = %2
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 0, i32 1, i32 0), align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strncpy(i32 %12, i8* %13, i32 3)
  br label %27

15:                                               ; preds = %2
  %16 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 0, i32 0, i32 1), align 4
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @strncpy(i32 %16, i8* %17, i32 3)
  br label %27

19:                                               ; preds = %2
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @_glfw, i32 0, i32 0, i32 0, i32 0, i32 0), align 4
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @strncpy(i32 %20, i8* %21, i32 3)
  br label %27

23:                                               ; preds = %2
  %24 = load i32, i32* @GLFW_INVALID_ENUM, align 4
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @_glfwInputError(i32 %24, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %23, %19, %15, %11
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @_GLFW_REQUIRE_INIT(...) #1

declare dso_local i32 @strncpy(i32, i8*, i32) #1

declare dso_local i32 @_glfwInputError(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
